--- a/app/views/home/weather.slim
+++ b/app/views/home/weather.slim
@@ -4,8 +4,27 @@ h1= params[:city].capitalize
 h5 Temperature:
 p= @weather.temp
 
-h5 Wind speed:
-p= @weather.wind_speed
+h5 Wind direction and speed:
+p
+  - if @weather.wind_direction == 'N'
+    i.fa.fa-arrow-up
+  - elsif @weather.wind_direction == 'NE'
+    i.fa.fa-arrow-up.fa-rotate-45
+  - elsif @weather.wind_direction == 'E'
+    i.fa-arrow-right
+  - elsif @weather.wind_direction == 'SE'
+    i.fa-arrow-right.fa-rotate-45
+  - elsif @weather.wind_direction == 'S'
+    i.fa-arrow-down
+  - elsif @weather.wind_direction == 'SW'
+    i.fa-arrow-down.fa-rotate-45
+  - elsif @weather.wind_direction == 'W'
+    i.fa.fa-arrow-left
+  - elsif @weather.wind_direction == 'NW'
+    i.fa-arrow-left.fa-rotate-45
+  - else
+    i.fa-warning
 
-h5 Wind direction:
-p= @weather.wind_direction
+  = ' ' + @weather.wind_speed
+
+
