--- a/app/views/home/weather.slim
+++ b/app/views/home/weather.slim
@@ -13,19 +13,19 @@ p
   - elsif @weather.wind_direction == 'NE'
     i.fa.fa-arrow-up.fa-rotate-45
   - elsif @weather.wind_direction == 'E'
-    i.fa-arrow-right
+    i.fa.fa-arrow-right
   - elsif @weather.wind_direction == 'SE'
-    i.fa-arrow-right.fa-rotate-45
+    i.fa.fa-arrow-right.fa-rotate-45
   - elsif @weather.wind_direction == 'S'
-    i.fa-arrow-down
+    i.fa.fa-arrow-down
   - elsif @weather.wind_direction == 'SW'
-    i.fa-arrow-down.fa-rotate-45
+    i.fa.fa-arrow-down.fa-rotate-45
   - elsif @weather.wind_direction == 'W'
     i.fa.fa-arrow-left
   - elsif @weather.wind_direction == 'NW'
-    i.fa-arrow-left.fa-rotate-45
+    i.fa.fa-arrow-left.fa-rotate-45
   - else
-    i.fa-warning
+    i.fa.fa-warning
 
   = ' ' + @weather.wind_speed
 
