add form_tag for city in app header

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -1,5 +1,1 @@
-= form_tag weather_path, method: :get do
-  = label_tag :city, 'Weather for: '
-  = text_field_tag :city, params[:city]
-  = submit_tag 'CHECK'
-
+p MyWeather is an app for checking weather in city choosen by you
