--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -7,7 +7,10 @@ html
     = csrf_meta_tags
   body
     .wrapper
-      .main-content
+      .header
+        = render 'layouts/header'
+
+      .container
         == yield
 
       #footer
