--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@ html, body {
 #footer {
   width: 100%;
   height: 50px;
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
 }
