--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -2,6 +2,7 @@ h2 About MyWeather
 
 p You can check current weather for city choosen by you.
   Simply write name of city that you want(it must be placed in country that is set in app configuration) and look at its current weather.
+  You can change configuration settings when you sign up.
 
 p Application is using two external APIs:
 ul
@@ -16,3 +17,30 @@ p
 p
   | Units:
   strong= ' ' + @app_config.units
+
+- if current_user && current_user.app_config.nil?
+  = simple_form_for @new_config do |f|
+    - if @new_config.errors.any?
+      .alert.alert-danger
+        h2 Form is invalid
+        ul
+          - @new_config.errors.full_messages.each do |msg|
+            li= msd
+
+    .form-group
+      = f.label :name, class: 'control-label'
+      = f.text_field :name, class: 'form-control'
+
+    .form-group
+      = country_select('app_config', 'country')
+
+    .form-group
+      = f.input :language, collection: ['en', 'ru', 'it', 'es', 'sp', 'uk', 'ua', 'de', 'pt',
+                                        'ro', 'pl', 'fi', 'nl', 'fr', 'bg', 'sv', 'se', 'zh_tw',
+                                        'zh', 'tr', 'hr', 'ca']
+
+    .form-group
+      = f.input :units, collection: ['metric', 'imperial', 'internal']
+
+    .actions
+      = f.submit 'Save', class: 'btn btn-primary'
