--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -19,28 +19,4 @@ p
   strong= ' ' + @app_config.units
 
 - if current_user && current_user.app_config.nil?
-  = simple_form_for @new_config do |f|
-    - if @new_config.errors.any?
-      .alert.alert-danger
-        h2 Form is invalid
-        ul
-          - @new_config.errors.full_messages.each do |msg|
-            li= msd
-
-    .form-group
-      = f.label :name, class: 'control-label'
-      = f.text_field :name, class: 'form-control'
-
-    .form-group
-      = country_select('app_config', 'country')
-
-    .form-group
-      = f.input :language, collection: ['en', 'ru', 'it', 'es', 'sp', 'uk', 'ua', 'de', 'pt',
-                                        'ro', 'pl', 'fi', 'nl', 'fr', 'bg', 'sv', 'se', 'zh_tw',
-                                        'zh', 'tr', 'hr', 'ca']
-
-    .form-group
-      = f.input :units, collection: ['metric', 'imperial', 'internal']
-
-    .actions
-      = f.submit 'Save', class: 'btn btn-primary'
+  = render 'home/config_form'
